--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,6 +158,10 @@ p {
   background-color: rgba(255, 255, 255, 0.9);
 }
 
+#panel.display {
+  display: block;
+}
+
 #panel button {
   width: 25px;
   height: 25px;
