Click outside cells to unselect cell.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -303,20 +303,30 @@ rect.region.hide {
 }
 
 circle {
-  fill-opacity: 0.7;
+  fill-opacity: 0.5;
 }
 
 circle:hover {
-  fill-opacity: 0.9;
+  fill-opacity: 0.8;
 }
 
 circle.selected {
-  fill: #000;
-  fill-opacity: 1;
+  animation: flash-animation 0.5s ease-out infinite;
+  animation-direction: alternate;
+}
+
+@keyframes flash-animation {
+  from {
+    fill-opacity: 0.8;
+  }
+  to {
+    fill-opacity: 0.1;
+  }
 }
 
 circle.hide {
   fill-opacity: 0.15;
+  stroke-opacity: 0.5;
   pointer-events: none;
 }
 
