--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,6 +92,14 @@ input[type=number] {
   margin-left: 0px;
 }
 
+.form-group-top {
+  display: inline-block;
+  margin-right: 50px;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  margin-left: 0px;
+}
+
 p {
   margin-top: 25px;
   margin-bottom: 10px;
@@ -211,6 +219,13 @@ p {
 #panel .form-group {
   display: inline-flex;
   margin-top: -10px;
+  margin-left: 60px;
+}
+
+#panel .form-group-top {
+  display: inline-flex;
+  margin-top: -10px;
+  margin-bottom: -10px;
   margin-left: 60px;
 }
 
